Add fast weapon spawn setting